@@ -87,6 +87,7 @@ task prepareSamples {
 task cleanSamples(type: Delete) {
     delete {tasks.withType(ProjectGeneratorTask)*.destDir}
     delete {tasks.withType(RemoteProject)*.outputDirectory}
+    delete {tasks.withType(JavaExec)*.outputs}
 }
 
 def withPerformanceDb = { task ->
@@ -111,9 +112,6 @@ ext.performanceReportTasks = tasks.withType(PerformanceReport)
 performanceReportTasks.all(withPerformanceDb)
 
 task performanceReport(type: PerformanceReport) {
-    //jvmArgs '-Xverify:none', '-XX:+UnlockCommercialFeatures', '-XX:+FlightRecorder', '-XX:+UnlockDiagnosticVMOptions', '-XX:+DebugNonSafepoints', '-XX:FlightRecorderOptions=stackdepth=1024,disk=true,dumponexit=true,defaultrecording=true'
-    minHeapSize = '1g'
-    maxHeapSize = '2g'
     classpath = sourceSets.performanceTest.runtimeClasspath
     resultStoreClass = "org.gradle.performance.results.AllResultsStore"
     reportDir = new File(buildDir, "performance-tests/report")
@@ -124,9 +122,12 @@ ext.performanceTestTasks = tasks.withType(PerformanceTest)
 
 performanceTestTasks.all { PerformanceTest task ->
     withPerformanceDb(task)
-    testClassesDir = sourceSets.performanceTest.output.classesDir
+    testClassesDirs = sourceSets.performanceTest.output.classesDirs
     classpath = sourceSets.performanceTest.runtimeClasspath
-    dependsOn( prepareSamples, { project(':toolingApi').publishLocalArchives }, ':distributions:binZip')
+    dependsOn prepareSamples
+    requiresBinZip = true
+    requiresLibsRepo = true
+
     finalizedBy performanceReport
 
     project.task("clean${task.name.capitalize()}", type: Delete) {
@@ -139,27 +140,8 @@ performanceTestTasks.all { PerformanceTest task ->
     }
 
     maxParallelForks = 1
-    checks = 'speed'
-
-    // JVM arguments to get more stable performance on the measurements side to minimize the affect of measuring and executing the build on the performance measurement results
-    jvmArgs '-XX:+AlwaysPreTouch', '-XX:BiasedLockingStartupDelay=0', '-XX:CICompilerCount=2', '-Dsun.io.useCanonCaches=false'
-    environment 'MALLOC_ARENA_MAX', '2' // see https://devcenter.heroku.com/articles/tuning-glibc-memory-behavior#what-value-to-choose-for-malloc_arena_max
-
-    // Retain the tmpdir in running performance tests
-    // In CI, the build has java.io.tmpdir set to TeamCity agent's
-    // temp/buildTmp directory that gets cleaned up after the build
-    // completes.
-    systemProperty 'java.io.tmpdir', System.getProperty('java.io.tmpdir')
 
     doFirst {
-        // Some performance builds generate a lot of output,
-        // that is buffered until the test finishes via GradleExecuter.
-        if (System.getProperty('sun.arch.data.model').contains("64")) {
-            minHeapSize = '4g'
-            maxHeapSize = '4g'
-        } else {
-            println "not increasing JVM heap size due to use of 32bit JVM"
-        }
         if (task.channel) {
             performanceReport.systemProperty 'org.gradle.performance.execution.channel', task.channel
         }
@@ -168,13 +150,13 @@ performanceTestTasks.all { PerformanceTest task ->
 
 task performanceTest(type: PerformanceTest) {
     options {
-        excludeCategories 'org.gradle.performance.categories.Experiment'
+        excludeCategories 'org.gradle.performance.categories.PerformanceExperiment'
     }
 }
 
 task performanceExperiment(type: PerformanceTest) {
     options {
-        includeCategories 'org.gradle.performance.categories.Experiment'
+        includeCategories 'org.gradle.performance.categories.PerformanceExperiment'
     }
 }
 
@@ -205,14 +187,14 @@ tasks.withType(DistributedPerformanceTest) {
 
 task distributedPerformanceTest(type: DistributedPerformanceTest) {
     options {
-        excludeCategories 'org.gradle.performance.categories.Experiment'
+        excludeCategories 'org.gradle.performance.categories.PerformanceExperiment'
     }
     channel = 'commits'
 }
 
 task distributedPerformanceExperiment(type: DistributedPerformanceTest) {
     options {
-        includeCategories 'org.gradle.performance.categories.Experiment'
+        includeCategories 'org.gradle.performance.categories.PerformanceExperiment'
     }
     channel = 'experiments'
 }
@@ -224,16 +206,12 @@ task distributedFullPerformanceTest(type: DistributedPerformanceTest) {
 }
 
 configure([performanceTest, performanceExperiment, fullPerformanceTest, performanceAdhocTest]) {
+    group = 'verification'
+
     if (project.hasProperty('org.gradle.performance.use_yourkit')) {
         testLogging.showStandardStreams = true
         systemProperties['org.gradle.performance.use_yourkit'] = '1'
         outputs.upToDateWhen { false }
-    }
-    if (project.hasProperty('org.gradle.performance.heapdump')) {
-        systemProperties['org.gradle.performance.heapdump'] = project.property('org.gradle.performance.heapdump')?:'1'
-    }
-    if (project.hasProperty('org.gradle.performance.hotspotlog')) {
-        systemProperties['org.gradle.performance.hotspotlog'] = '1'
     }
     if (project.hasProperty('org.gradle.performance.honestprofiler')) {
         systemProperties['org.gradle.performance.honestprofiler'] = '1'
@@ -279,17 +257,6 @@ class PerformanceReport extends JavaExec {
 
 tasks.withType(ProjectGeneratorTask) {
     sharedTemplateDirectory = project.findProject(':internalPerformanceTesting').file('src/templates')
-}
-
-tasks.withType(AbstractProjectGeneratorTask) {
-    dependsOn ':internalPerformanceTesting:measurementPluginJar'
-    doFirst {
-        templateArgs.measurementPluginJarFile = project.tasks.findByPath(':internalPerformanceTesting:measurementPluginJar')?.archivePath
-    }
-}
-
-tasks.withType(RemoteProject).all {
-    dependsOn ':internalPerformanceTesting:measurementPluginJar'
 }
 
 // add task that zips the junit xml test report files to a zip file
